--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "composer/installers": "^2.0",
         "doctrine/annotations": "^1.2",
         "doctrine/collections": "^1.3",
-        "drupal/console-core": "^1.9",
+        "drupal/console-core": "dev-master",
         "drupal/console-extend-plugin": "dev-master",
         "psy/psysh": "0.6.* || ~0.8",
         "symfony/expression-language": "^5.4|^6.0",
